[metadata]
name = yfinance-cache2
version = 0.1.1
author = ValueRaider
author_email = ValueRaider@protonmail.com
description = Caching wrapper for yfinance module. Intelligent caching, not dumb caching of web requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ValueRaider/yfinance-cache
project_urls =
    Bug Tracker = https://github.com/ValueRaider/yfinance-cache/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
